<resources>
    <string name="app_name">Przedstawiciel Handlowy</string>
    <string name="orders">Zamówienia</string>
    <string name="shops">Sklepy</string>
    <string name="goods">Towary</string>
    <string name="notes">Notatki</string>
    <string name="timetable">Harmonogram</string>
    <string name="save">Zapisz</string>
    <string name="edit">Edytuj</string>
    <string name="remove">Usuń</string>
    <string name="close">Zamknij</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="are_you_sure_remove">Czy jesteś pewien, że chcesz usunąć element?</string>
</resources>
