<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/orders" />

    <item
        android:id="@+id/navigation_shops"
        android:icon="@drawable/ic_shops"
        android:title="@string/shops" />

    <item
        android:id="@+id/navigation_goods"
        android:icon="@drawable/ic_goods"
        android:title="@string/goods" />

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_notes"
        android:title="@string/notes" />

    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/ic_timetable"
        android:title="@string/timetable" />

</menu>
